// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders DatePicker with placeholder 1`] = `
<View
  style={
    Object {
      "marginBottom": 5,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "center",
          "marginBottom": 5,
          "marginTop": 10,
          "width": "100%",
        },
        Object {
          "borderColor": "rgba(33, 33, 33, 0.5)",
          "borderWidth": 0.9,
        },
        Object {
          "borderRadius": 15,
          "paddingHorizontal": 10,
        },
      ]
    }
  >
    <Text
      onPress={[Function]}
      style={
        Array [
          Object {
            "color": "#000",
            "fontSize": 16,
            "fontWeight": "normal",
            "textAlign": "left",
          },
          Object {
            "color": "rgba(33, 33, 33, 0.5)",
            "flex": 1,
          },
        ]
      }
    >
      placeholder
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Text
        allowFontScaling={false}
        onPress={[Function]}
        style={
          Array [
            Object {
              "color": "rgba(33, 33, 33, 0.5)",
              "fontSize": 20,
            },
            Object {
              "marginRight": 5,
            },
            Object {
              "fontFamily": "Ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <Modal
    animationType="fade"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    transparent={true}
    visible={false}
  >
    <Text
      onPress={[Function]}
      style={
        Array [
          Object {
            "color": "#000",
            "fontSize": 16,
            "fontWeight": "normal",
            "textAlign": "left",
          },
          Object {
            "flex": 1,
          },
        ]
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#FFF",
          "flex": 1,
        }
      }
    >
      <RCTDatePicker
        date={1554104240475}
        mode="date"
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "height": 216,
          }
        }
      />
    </View>
    <Text
      onPress={[Function]}
      style={
        Array [
          Object {
            "color": "#000",
            "fontSize": 16,
            "fontWeight": "normal",
            "textAlign": "left",
          },
          Object {
            "flex": 1,
          },
        ]
      }
    />
  </Modal>
</View>
`;

exports[`renders colored DatePicker 1`] = `
<View
  style={
    Object {
      "marginBottom": 5,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "center",
          "marginBottom": 5,
          "marginTop": 10,
          "width": "100%",
        },
        Object {
          "borderColor": "rgba(33, 33, 33, 0.5)",
          "borderWidth": 0.9,
        },
        Object {
          "borderRadius": 15,
          "paddingHorizontal": 10,
        },
      ]
    }
  >
    <Text
      onPress={[Function]}
      style={
        Array [
          Object {
            "color": "#000",
            "fontSize": 16,
            "fontWeight": "normal",
            "textAlign": "left",
          },
          Object {
            "color": "rgba(33, 33, 33, 0.5)",
            "flex": 1,
          },
        ]
      }
    >
      Select Date
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Text
        allowFontScaling={false}
        onPress={[Function]}
        style={
          Array [
            Object {
              "color": "rgba(33, 33, 33, 0.5)",
              "fontSize": 20,
            },
            Object {
              "marginRight": 5,
            },
            Object {
              "fontFamily": "Ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <Modal
    animationType="fade"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    transparent={true}
    visible={false}
  >
    <Text
      onPress={[Function]}
      style={
        Array [
          Object {
            "color": "#000",
            "fontSize": 16,
            "fontWeight": "normal",
            "textAlign": "left",
          },
          Object {
            "flex": 1,
          },
        ]
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#FFF",
          "flex": 1,
        }
      }
    >
      <RCTDatePicker
        date={1554104240475}
        mode="date"
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "height": 216,
          }
        }
      />
    </View>
    <Text
      onPress={[Function]}
      style={
        Array [
          Object {
            "color": "#000",
            "fontSize": 16,
            "fontWeight": "normal",
            "textAlign": "left",
          },
          Object {
            "flex": 1,
          },
        ]
      }
    />
  </Modal>
</View>
`;

exports[`renders custom styled DatePicker 1`] = `
<View
  style={
    Object {
      "marginBottom": 5,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "center",
          "marginBottom": 5,
          "marginTop": 10,
          "width": "100%",
        },
        Object {
          "borderColor": "black",
          "borderRadius": 3,
          "borderWidth": 1,
        },
      ]
    }
  >
    <Text
      onPress={[Function]}
      style={
        Array [
          Object {
            "color": "#000",
            "fontSize": 16,
            "fontWeight": "normal",
            "textAlign": "left",
          },
          Object {
            "color": "rgba(33, 33, 33, 0.5)",
            "flex": 1,
          },
        ]
      }
    >
      Select Date
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Text
        allowFontScaling={false}
        onPress={[Function]}
        style={
          Array [
            Object {
              "color": "rgba(33, 33, 33, 0.5)",
              "fontSize": 20,
            },
            Object {
              "marginRight": 5,
            },
            Object {
              "fontFamily": "Ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <Modal
    animationType="fade"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    transparent={true}
    visible={false}
  >
    <Text
      onPress={[Function]}
      style={
        Array [
          Object {
            "color": "#000",
            "fontSize": 16,
            "fontWeight": "normal",
            "textAlign": "left",
          },
          Object {
            "flex": 1,
          },
        ]
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#FFF",
          "flex": 1,
        }
      }
    >
      <RCTDatePicker
        date={1554104240475}
        mode="date"
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "height": 216,
          }
        }
      />
    </View>
    <Text
      onPress={[Function]}
      style={
        Array [
          Object {
            "color": "#000",
            "fontSize": 16,
            "fontWeight": "normal",
            "textAlign": "left",
          },
          Object {
            "flex": 1,
          },
        ]
      }
    />
  </Modal>
</View>
`;

exports[`renders regular DatePicker 1`] = `
<View
  style={
    Object {
      "marginBottom": 5,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "center",
          "marginBottom": 5,
          "marginTop": 10,
          "width": "100%",
        },
        Object {
          "borderColor": "rgba(33, 33, 33, 0.5)",
          "borderWidth": 0.9,
        },
        Object {
          "borderRadius": 15,
          "paddingHorizontal": 10,
        },
      ]
    }
  >
    <Text
      onPress={[Function]}
      style={
        Array [
          Object {
            "color": "#000",
            "fontSize": 16,
            "fontWeight": "normal",
            "textAlign": "left",
          },
          Object {
            "color": "rgba(33, 33, 33, 0.5)",
            "flex": 1,
          },
        ]
      }
    >
      Select Date
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Text
        allowFontScaling={false}
        onPress={[Function]}
        style={
          Array [
            Object {
              "color": "rgba(33, 33, 33, 0.5)",
              "fontSize": 20,
            },
            Object {
              "marginRight": 5,
            },
            Object {
              "fontFamily": "Ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <Modal
    animationType="fade"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    transparent={true}
    visible={false}
  >
    <Text
      onPress={[Function]}
      style={
        Array [
          Object {
            "color": "#000",
            "fontSize": 16,
            "fontWeight": "normal",
            "textAlign": "left",
          },
          Object {
            "flex": 1,
          },
        ]
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#FFF",
          "flex": 1,
        }
      }
    >
      <RCTDatePicker
        date={1554104240475}
        mode="date"
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "height": 216,
          }
        }
      />
    </View>
    <Text
      onPress={[Function]}
      style={
        Array [
          Object {
            "color": "#000",
            "fontSize": 16,
            "fontWeight": "normal",
            "textAlign": "left",
          },
          Object {
            "flex": 1,
          },
        ]
      }
    />
  </Modal>
</View>
`;

exports[`renders rounded DatePicker 1`] = `
<View
  style={
    Object {
      "marginBottom": 5,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "center",
          "marginBottom": 5,
          "marginTop": 10,
          "width": "100%",
        },
        Object {
          "borderColor": "rgba(33, 33, 33, 0.5)",
          "borderWidth": 0.9,
        },
        Object {
          "borderRadius": 15,
          "paddingHorizontal": 10,
        },
        Object {
          "borderRadius": 22.5,
          "paddingHorizontal": 10,
        },
      ]
    }
  >
    <Text
      onPress={[Function]}
      style={
        Array [
          Object {
            "color": "#000",
            "fontSize": 16,
            "fontWeight": "normal",
            "textAlign": "left",
          },
          Object {
            "color": "rgba(33, 33, 33, 0.5)",
            "flex": 1,
          },
        ]
      }
    >
      Select Date
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Text
        allowFontScaling={false}
        onPress={[Function]}
        style={
          Array [
            Object {
              "color": "rgba(33, 33, 33, 0.5)",
              "fontSize": 20,
            },
            Object {
              "marginRight": 5,
            },
            Object {
              "fontFamily": "Ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <Modal
    animationType="fade"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    transparent={true}
    visible={false}
  >
    <Text
      onPress={[Function]}
      style={
        Array [
          Object {
            "color": "#000",
            "fontSize": 16,
            "fontWeight": "normal",
            "textAlign": "left",
          },
          Object {
            "flex": 1,
          },
        ]
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#FFF",
          "flex": 1,
        }
      }
    >
      <RCTDatePicker
        date={1554104240475}
        mode="date"
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "height": 216,
          }
        }
      />
    </View>
    <Text
      onPress={[Function]}
      style={
        Array [
          Object {
            "color": "#000",
            "fontSize": 16,
            "fontWeight": "normal",
            "textAlign": "left",
          },
          Object {
            "flex": 1,
          },
        ]
      }
    />
  </Modal>
</View>
`;

exports[`renders underlined DatePicker 1`] = `
<View
  style={
    Object {
      "marginBottom": 5,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "center",
          "marginBottom": 5,
          "marginTop": 10,
          "width": "100%",
        },
        Object {
          "borderBottomColor": "rgba(33, 33, 33, 0.5)",
          "borderBottomWidth": 0.9,
        },
      ]
    }
  >
    <Text
      onPress={[Function]}
      style={
        Array [
          Object {
            "color": "#000",
            "fontSize": 16,
            "fontWeight": "normal",
            "textAlign": "left",
          },
          Object {
            "color": "rgba(33, 33, 33, 0.5)",
            "flex": 1,
          },
        ]
      }
    >
      Select Date
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Text
        allowFontScaling={false}
        onPress={[Function]}
        style={
          Array [
            Object {
              "color": "rgba(33, 33, 33, 0.5)",
              "fontSize": 20,
            },
            Object {
              "marginRight": 5,
            },
            Object {
              "fontFamily": "Ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <Modal
    animationType="fade"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    transparent={true}
    visible={false}
  >
    <Text
      onPress={[Function]}
      style={
        Array [
          Object {
            "color": "#000",
            "fontSize": 16,
            "fontWeight": "normal",
            "textAlign": "left",
          },
          Object {
            "flex": 1,
          },
        ]
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#FFF",
          "flex": 1,
        }
      }
    >
      <RCTDatePicker
        date={1554104240475}
        mode="date"
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "height": 216,
          }
        }
      />
    </View>
    <Text
      onPress={[Function]}
      style={
        Array [
          Object {
            "color": "#000",
            "fontSize": 16,
            "fontWeight": "normal",
            "textAlign": "left",
          },
          Object {
            "flex": 1,
          },
        ]
      }
    />
  </Modal>
</View>
`;

exports[`renders unstyled DatePicker 1`] = `
<View
  style={
    Object {
      "marginBottom": 5,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "center",
          "marginBottom": 5,
          "marginTop": 10,
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      onPress={[Function]}
      style={
        Array [
          Object {
            "color": "#000",
            "fontSize": 16,
            "fontWeight": "normal",
            "textAlign": "left",
          },
          Object {
            "color": "rgba(33, 33, 33, 0.5)",
            "flex": 1,
          },
        ]
      }
    >
      Select Date
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Text
        allowFontScaling={false}
        onPress={[Function]}
        style={
          Array [
            Object {
              "color": "rgba(33, 33, 33, 0.5)",
              "fontSize": 20,
            },
            Object {
              "marginRight": 5,
            },
            Object {
              "fontFamily": "Ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <Modal
    animationType="fade"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    transparent={true}
    visible={false}
  >
    <Text
      onPress={[Function]}
      style={
        Array [
          Object {
            "color": "#000",
            "fontSize": 16,
            "fontWeight": "normal",
            "textAlign": "left",
          },
          Object {
            "flex": 1,
          },
        ]
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#FFF",
          "flex": 1,
        }
      }
    >
      <RCTDatePicker
        date={1554104240475}
        mode="date"
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "height": 216,
          }
        }
      />
    </View>
    <Text
      onPress={[Function]}
      style={
        Array [
          Object {
            "color": "#000",
            "fontSize": 16,
            "fontWeight": "normal",
            "textAlign": "left",
          },
          Object {
            "flex": 1,
          },
        ]
      }
    />
  </Modal>
</View>
`;
